<resources>
    <string name="app_name">Inventory App</string>
    <string name="table_contents_view">No Entries Yet. Press the + Button to add new</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Supplier Phone Number</string>
    <string name="product_supplier_phone_number_label">Supplier Ph. No.:</string>
    <string name="add_to_inventory">Save</string>
    <string name="product_name">Product Name</string>
    <string name="clear_inventory">Clear Inventory</string>
    <string name="alert_dialog_msg">Are you sure you want to delete all items from the Inventory?</string>
    <string name="delete_single_product_alert">Are you sure you want to delete this product?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="error_deleting_product_msg">Some error occurred while deleting the product</string>
    <string name="product_delete_success_msg">Product Deleted Successfully</string>
    <string name="error_msg">Unexpected Error. Please try again</string>
    <string name="save_product_success_msg">Successfully saved</string>
    <string name="add_title">Add New Product</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="discard_changes_alert">Discard changes?</string>
    <string name="product_name_label">Product Name:</string>
    <string name="product_price_label">Product Price:</string>
    <string name="product_quantity_label">Product Quantity:</string>
    <string name="product_supplier_name_label">Supplier Name:</string>
    <string name="increase_quantity_btn_label">+</string>
    <string name="decrease_quantity_btn_label">-</string>
    <string name="call_button_content_description">Call Button</string>
    <string name="sell">SELL</string>
    <string name="product_details">Product Details</string>
    <string name="quantity">Quantity</string>
    <string name="inventory_cleared">Inventory Cleared</string>
    <string name="colon">" : "</string>
    <string name="out_of_stock_toast_msg">Product is out of stock. Call the supplier to order more</string>
    <string name="blank_error_msg">can\'t be blank</string>
    <string name="on_product_sold_toast_msg">One item sold of Product</string>
    <string name="cant_leave_any_field_blank_toast_msg">You cant leave any field blank</string>
</resources>
